# quadsim

./: .gitignore  EKF.py  Gemini_EKF.py  Mahony.py  Model.py  README.md  UKF.py  betaflight_config.txt  dynamic_model.py  platformio.ini
control_logic/: flight_controller.cpp
data/: bike_test.csv  flight_log_part1.csv  ground_compass_sweep.csv  magnetometer_data1.csv
data/12292025/: flight_log_part1.csv  flight_log_part2.csv  flight_log_part3.csv
data/20250109/: magnetometer_data1.csv  magnetometer_data2.csv
data/20260108/: driving.csv  running.csv
docs/: index.html
firmware/: platformio.ini
firmware/include/: Crsf.h  GPS.h  GPS_config.h  MavlinkPublisher.h  bmi270.h  bmi270_config.h  peripherals.h  timing.h  usbd_cdc_if.h  usbd_conf.h  w25.h
firmware/src/: Crsf.cpp  Crsf.h  DShot.cpp  DShot.h  GPS.cpp  MavlinkPublisher.cpp  MavlinkPublisher.h  MotorDriver.h  bmi270.c  bmi270.cpp  main.c  main.cpp  main.cpp.bk  peripherals.cpp  usbd_cdc_if.c  usbd_desc.c  w25.c
gazebo/: CMakeLists.txt  attach_controller.ps1
gazebo/models/quadcopter/: model.config  quadcopter.sdf
gazebo/src/: ControllerInterface.cpp  ControllerInterface.h  GazeboInterface.cpp  GazeboInterface.h  Logger.h  TestHarness.cpp  TestHarness.h  main.cpp  mavlink_bridge.cpp  timing.h
gazebo/test_scripts/: analysis.py  publisher.py
gazebo/worlds/: sitl.world
include/: peripherals.h
include/drivers/: Crsf.h  DShot.h  GPS.h  W25Q128FV.h  bmi270.h  qmc5883l.h  usbd_cdc_if.h  usbd_desc.h
lib/buffers/: CMakeLists.txt
lib/buffers/include/: ClaimCommitRingBuffer.h
lib/buffers/tests/: CMakeLists.txt  test_ringbuffer.cpp
lib/controllers/include/: Estimator.h  ExcitationGenerator.h  GeometricController.h  INDIController.h  KinematicAdjudicator.h  QuadModel.h
lib/controllers/src/: Estimator.cpp  ExcitationGenerator.cpp  GeometricController.cpp  INDIController.cpp  KinematicAdjudicator.cpp
lib/filters/include/: BasicFilters.h  ESKF.h  MahonyFilter.h
lib/filters/src/: ESKF.cpp  MahonyFilter.cpp
lib/flight_core/inc/: DataManager.h  FilterBase.h  GeometricController.h  PID.h
lib/flight_core/include/: ClaimCommitDataChannel.h  Controller.h  DataManager.h  DataTypes.h  Estimator.h  INDIController.h  KinematicAdjudicator.h  MCE.h  MahonyFilter.h  QuadModel.h  SensorData.h
lib/flight_core/src/: ESKF.cpp  Estimator.cpp  GeometricController.cpp  INDIController.cpp  KinematicAdjudicator.cpp  MCE.cpp  MahonyFilter.cpp
lib/world_model/include/: WMM.h  WMMData.h
libs/common/: Consumer.h  DataChannel.h  OtherData.h  PID.cpp  Quaternion.h  SensorData.h  Vector3.h  coord_trans.h
libs/flight_controller/: AutoLevelController.cpp  AutoLevelController.h  BodyRateController.cpp  DataManager.h  EKF.cpp  EKF.h  ESKF.cpp  ESKF.h  GeometricController.cpp  GeometricController.h  MCE.cpp  MCE.h  MahonyFilter.cpp  MahonyFilter.h  TruthFilter.cpp  coord_trans.cpp
monitor/: filter_mavlink-decoder.py  mavlink_filter.py
python_scripts/: EKF.py  Gemini_EKF.py  dynamic_model.py
replay/: CmakeLists.txt
replay/src/: main.cpp  rls_replay.cpp  timing.h
simulation/: CMakeLists.txt  config.sh  sitl_hal.h  sitl_main.cpp  state_store.h  unity_main.cpp
simulation/models/quadcopter/: model.config  quadcopter.sdf
simulation/protos/: Quadcopter.proto
simulation/src/: ControllerInterface.cpp  ControllerInterface.h  Logger.h  MotorInterface.cpp  MotorInterface.h  TestHarness.cpp  TestHarness.h  main.cpp
simulation/worlds/: sitl.world  test_flight.wbt
src/: main.cpp  peripherals.cpp
src/abstraction_layer/: hal_interface.h
src/abstraction_layer/unity/: state_store.h  unity_hal.h
src/common/: Consumer.h  DataChannel.h  OtherData.h  PID.cpp  PID.h  Quaternion.h  SensorData.h  Vector3.h  coord_trans.cpp  coord_trans.h  gravity.h  sensor_data.h  types.h
src/control_logic/: flight_controller.cpp  flight_controller.h  utils.cpp  utils.h
src/drivers/: Crsf.cpp  DShot.cpp  GPS.cpp  W25Q128FV.cpp  bmi270.cpp  peripherals.cpp  qmc5883l.cpp  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
src/drivers/imu/: bmi270.cpp  bmi270.h
src/drivers/usb/: usbd_cdc_if.c
src/flight_controller/: BodyRateController.cpp  BodyRateController.h  Controller.cpp  Controller.h  DataManager.cpp  DataManager.h  EKF.cpp  EKF.h  FilterBase.h  TruthFilter.cpp  TruthFilter.h
src/physics/: physics_model.cpp  physics_model.h
src/quadsim/: MotorModel.h  QuadInterface.cs  quad.cpp  quad.h  unity_main.cpp
tools/analysis/: analysis.py  geom_gain_checker.py  mag_analysis.py  raw_data_parser.py  ye.py
tools/build_system/platformio/: post_install_script.py
tools/generation/: WMM.py
tools/validation/: DataLogger.py  Estimator.py  Model.py  RLS.py  Sensors.py  SimCore.py  utils.py
